bind okta and google creadential through app settings

--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -13,6 +13,10 @@
     "ClientSecret": "",
     "CallbackPath": "/signin-oidc-okta"
   },
+  "Google": {
+    "ClientId": "",
+    "ClientSecret": ""
+  },
   "ConnectionStrings": {
     "Local": "Data Source=(LocalDb)\\MSSQLLocalDB;database=IdentityServer4.Quickstart.EntityFramework-4.0.0;trusted_connection=yes;"
   }
